CH additions to CH1 of Guidelines paper

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -35,6 +35,10 @@ Less frequently, multidimensional approaches that aggregate status over numerous
 
 Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the risk of component CUs dropping below their lower benchmarks. The present work expands on the previous work on biological benchmarks for Pacific salmon by providing guidance on establishing LRPs for Pacific salmon SMUs. 
 
+## Alternative spatial scales
+
+The Fish Stock provision pertain to the management of fisheries. For Pacific salmon, threats occur at a range of spatial scales from local habitat disturbances impacting local spawning habitat, to regional-scale climate changes. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement, which also occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been limited in recent years [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. The LRPs presented here are applied at the SMU scale, though could also be applied at smaller or larger scales to inform a variety management decisions.
+
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
 
 ## Goals of Working Paper
@@ -52,9 +56,12 @@ uncertainties arising from missing or limited CU-level data. (See \ref(recommend
 
 Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
 
+
+
+
 ## Scope of Working Paper
 
-A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. While those LRPs are evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
+A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. The application of the LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
 
 While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, but is a gap that warrants further discussion. 
 We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
@@ -80,54 +87,31 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available (e.g., from marking of hatchery-origin fish) [@dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin fish are removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish are removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 In some cases where hatchery-origin fish are not marked, data on the proportion of hatchery-origin fish are not available for integrated-transition and integrated-wild populations. In these cases, WSP assessments generally rely on total spawner abundances regardless of hatchery contribution (e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016). In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
-In addition, some populations without hatcheries may be influenced by straying from out-of-basin hatcheries. A very large fraction of fish are wild but gene flow modelling suggests a long-term increasing in genetic influence of hatcheries as straying increases [@withlerGeneticallyBasedTargets2018]. The impact of these strays are generally not included in assessments in part because of absence of visible marking on hatchery fish, and so they are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon in BC are on-going (W. Luedke pers. comm.)
 
-<!--CH remove: Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usualy not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011).-->
+In addition, some populations without hatcheries may be influenced by straying from out-of-basin hatcheries. A very large fraction of fish are wild but gene flow modelling suggests a long-term increasing in genetic influence of hatcheries as straying increases [@withlerGeneticallyBasedTargets2018]. The impact of these strays are generally not included in assessments in part because of absence of visible marking on hatchery fish or genetic studies to determine their influence, and so they are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.)
 
-
-
-<!--Sabrina email: In short, the management of hatchery produced fish must be separated from wild production. This is a bit tricky for WCVI as we don’t have enough information or data to quantitatively separate ‘natural’ and ‘hatchery’. It would be ideal to remove 1st generation hatchery-origin fish but for WCVI we simply don’t have that information. Strays have been a real issue but hard to quantify the impacts to each non-targeted hatchery system without collecting the data needed annually as each year would differ. How much stray to a particular system and for how long are factors but we don’t assess this enough or adequately. For example, during a M/R project in the Moyeha the 2010 half the samples were hatchery but only 12 samples were collected and the next year all samples were natural origin. 
-We need to be clear to include this uncertainty for WCVI in the report stating results could change if more data was available to adequately and quantitatively (not just I see a clipped salmon or not but genetics and/or more directed projects to the cause) separate the hatchery/1st generation from natural spawners. This is after all a ‘tool-kit’ that has options to choose from but may not have the full picture until gaps are filled. Highlighting the much needed information to properly segregate hatchery to natural spawners would be required to adequately assess.-->
-
-<!-- Suggested text from Sue when reviewing case study paper: 
-
-An management unit (MU) is the group level LRPs are evaluated on. For Pacific Salmon, an MU is comprised of one or more CUs, where a CU is a fundamental unit of biodiversity for Pacific salmon. It is ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable timeframe, such as human lifetime or a specified number of salmon generations.’ (DFO 2005).
-
-Pacific Salmon given their complex population structure, and freshwater and marine life stages, have unique considerations relative to marine species. For this reason, fisheries, which operate at the MU scale, is not the only management action that can be used to improve salmon production. In fact, catch has been considerably reduced in recent years (see SOPO Grant et al. 2021).  Habitat management and hatchery management are playing an increasing role in actions required to support salmon adaptation to climate change, and these require CU considerations within habitat aggregations, or down to the population level for hatchery ones. For marine species, the only lever is fisheries, so a single aggregate MU that relates to this scale makes most sense.
-
-K.Holt note: some of this may be best in guidance paper?
-
--->
+<!--CH remove: Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usually not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011).-->
 
 
 ## Role of LRPs {#roleLRPs}
 
-LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries and anthropogenic threats and possible mitigation (e.g., habitat and harvest). LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Within a harvest control role, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using biological considerations [@dfoScienceAdvicePrecautionary2021]. 
+LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Within a harvest control role, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
-More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probaiblity of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g,. hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty (ref). The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty (ref). The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
-<!--CH side note:  DFO's Fisheries Sustainability checklist are typically management operational control points, and not biological LRPs per se-->
-
-
-
-<!-- DD's email from 26 Oct
+<!--CH side note:  DFO's Fisheries Sustainability checklist shows LRPs that usually management operational control points, and not biological LRPs per se-->
 
 
+## Process to identify candidate LRPs and guidelines
 
-<!--CH: In the Guidelines paper, I would like to add text that aggregate-abundance based LRPs may not need to be identified explicitly for harvest management, if HCRs are identified and evaluated to have a low probability of CUs being red. We might want to pull this thread through the Introduction of the case study paper or better yet here in Ch2 here when abundance-based LRPs are mentioned. I will include similar, but expanded text in the Guidelines paper, referring to the Groundfish MP Framework) --> 
+A technical working group was developed to capture expertise and knowledge associated with biological basis of serious harm to SMUs to support the development and application of candidate methods for LRPs, composed of DFO and First Nations analysts. The technical working group was not meant to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives, considerations that are included when developing management responses to stock assessments.
 
-## Consistency with National Guidance on LRPs
-- Highlight consistencies/inconsistencies that emerge from December 2021 TESA workshop and subsequent discussions with NHQ primary authors, e.g., Danny Ings at NWAFC in St. John's.
-
-
-
-## Objectives of this Document
- - Provide guidance on setting LRPs for SMU
- - List alternative methods and highlight when they should be used and when they should be avoided 
-
-## Approach Taken to Develop Guidelines
--	Describe Technical Working Group
--	Explain how case studies were used by the TWG to develop guidance
+In particular, the technical working group informed five components of the work: 
+1. Principles for the development of Pacific salmon LRPs (make a new chapter)
+2. A tool kit of candidate LRP methods (see \@ref(est-methods)
+3. A demonstration of the application of candidate LRPs to case studies (see \@ref(case-studies))
+4. Recommendations on when, and when not to use each candidate LRP method (see \@ref(guidelines))
+5, Recommendations on future research (see \@ref(recommendations))
 
 
 <!--
