--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -95,16 +95,15 @@ Furthermore, unlike other marine fisheries, threats and management levers for Pa
 CW:Should we recommend (hint) that RP will likely need to be designed to include action at various -->
 
 
-Once LRPs are identified, SMU-level objectives and management procedures can then be evaluated in cost-benefit analyses to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the red status within an SMU is a first step in that process.
+Once LRPs are identified, SMU-level objectives and management procedures can then be evaluated to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the red status within an SMU is a first step in that process.
 
 
 ### Assess Status Relative to Proportion-based LRP (Step 5)
 
-The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4. 
-
-Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [holtIndicatorsStatusBenchmarks2009a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than an generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
+The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [holtIndicatorsStatusBenchmarks2009a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than an generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
 Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of a Rapid Multidimensional Scanning Tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in \@ref(est-methods) and companion working paper (Holt et al. in prep).
+
 
 ### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
 <!--CH comment: this section needs input from Sue-->
@@ -115,13 +114,16 @@ CW: Agree with keeping rebuilding plan and LRP separate. -->
 The frequency of SMU-scale peer reviews outside of the annual implementation of the Rapid Multidimensional Scanner Tool will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
+<!--CH incorporate considerations when preferred-->
 
-LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. The choice to develop an aggregate-abundance based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. We emphasize that aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the same principles outlined in the \@ref(intro). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). Furthermore, harvest control rules that use a variety of management levers can be developed independent of aggregate-abundance based LRPs. For example, time-area closures limiting harvest on specific CUs and hatchery and habitat enhancement can be implemented to support CU-specific  objectives and achieve proportion-based LRPs regardless of aggregate abundances.
+LRPs can be used to inform a variety of management decisions (as described in the section, \@ref(roleLRPs)).  Although proportion-based LRPS are sufficient under Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making. For SMUs where harvest is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. However, harvest management can occur at a variety of spatial scales, including e.g., spatial closures to protect indiviudal CUs. Therefore to align with harvest management needs it is often not necessary to aggregate status to the SMU level. The choice to develop an aggregate-abundance based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. 
+
+Aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in the \@ref(est-methods). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). Furthermore, harvest control rules that use a variety of management levers can be developed independent of aggregate-abundance based LRPs. For example, time-area closures limiting harvest on specific CUs and hatchery and habitat enhancement can be implemented to support CU-specific  objectives and achieve proportion-based LRPs regardless of aggregate abundances.
 
 If aggregate-abundance based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate-abundance based LRPs are required, and build on proportion-based LRPs derived in the previous steps. 
 
-<!-- CW May be appropriate to Subdivide these steps within two sub sections: proportional based LRPS and aggregate abundance based LRPs 
-Also I think we should keep only the steps in this chapter. -->
+
+<!-- CW May be appropriate to Subdivide these steps within two sub sections: proportional based LRPS and aggregate abundance based LRPs -->
 ### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
 
 Aggregate-abundance based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide a range of probabilities and their definitions adapted from likelihood scale used by the International Panel on Climate Change (IPCC ref, to be added), instead of specifying a single probability. DFO's Guidelines for the Implementation of Fish Stock Provisions states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]. This definition of breaching an LRP suggests a risk neutral approach to identifying serious harm, whereby risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. In our case studies, we have focused on aggregate-abundances with 50$\%$ probability of achieving proportion-based LRPs, though other probabilities could be considered on a case-by-case basis.
