--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -71,6 +71,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\8DUZT482\\Berger - 2019 - Character of temporal variability in stock product.pdf}
 }
 
+@book{boldtStatePhysicalBiological2020,
+  title = {State of the Physical, Biological and Selected Fishery Resources of {{Pacific Canadian Marine Ecosystems}} in 2019},
+  author = {Boldt, Jennifer Lynn and {Canada} and {Department of Fisheries and Oceans}},
+  year = {2020},
+  isbn = {978-0-660-34961-9},
+  langid = {english},
+  annotation = {OCLC: 1194867021},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\G6GZ7F9M\\Boldt et al. - 2020 - State of the physical, biological and selected fis.pdf}
+}
+
 @article{bradfordReferencePointsCoho2000,
   title = {Reference Points for Coho Salmon ( {{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}} ) Harvest Rates and Escapement Goals Based on Freshwater Production},
   author = {Bradford, Michael J and Myers, Ransom A and Irvine, James R},
@@ -440,6 +450,15 @@
   abstract = {The 24 Fraser Sockeye Conservation Units (CUs) were used as case studies to explore methods of status integration for Strategy 1 of the Wild Salmon Policy (WSP): Standardized Monitoring of Wild Salmon Status. Although most of these Fraser Sockeye case studies represent data rich CUs in the Pacific Region, with long time series of stock-recruitment data, a few CUs are also data limited (e.g. Chilliwack-ES only has some recent spawner abundance data).},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\LXSEPKP4\\Grant and Pestal - Évaluation de l'état biologique intégré en vertu d.pdf}
+}
+
+@incollection{grantStateCanadianPacific2020,
+  title = {State of {{Canadian Pacific}} Salmon in 2019},
+  booktitle = {State of the Physical, Biological and Selected Fishery Resources of {{Pacific Canadian}} Marine Ecosystems in 2019},
+  author = {Grant, S C H and MacDonald, B L and Michielsens, C G J},
+  year = {2020},
+  series = {Can. {{Tech}}. {{Rep}}. {{Fish}}. {{Aquat}}. {{Sci}}. 3777},
+  pages = {86--91}
 }
 
 @techreport{holtbyConservationUnitsPacific2007,
